--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="col-md-2 col-sm-3 col-xs-6">
                     <!-- logo part -->
                     <div class="logo">
-                        <a href="index-1.html"><img src="img\logo.png" alt=""></a>
+                        <a href="index.html"><img src="img\logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-md-10 col-sm-9 col-xs-6">
